--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@astrojs/check": "^0.5.9",
     "@astrojs/svelte": "^5.2.0",
+    "@astrojs/vercel": "^7.5.3",
+    "@vercel/analytics": "^1.2.2",
     "astro": "^4.5.5",
     "svelte": "^4.2.12",
     "typescript": "^5.4.2"
