--- a/package.json
+++ b/package.json
@@ -11,11 +11,25 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.9",
+    "@astrojs/react": "^3.3.1",
     "@astrojs/svelte": "^5.2.0",
+    "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.5.3",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
     "@vercel/analytics": "^1.2.2",
     "astro": "^4.5.5",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "svelte": "^4.2.12",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss": "^3.4.3",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.4.2"
   }
 }
