--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/svelte": "^5.2.0",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.5.3",
+    "@prisma/client": "5.14.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
@@ -32,5 +33,8 @@
     "tailwindcss": "^3.4.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.4.2"
+  },
+  "devDependencies": {
+    "prisma": "^5.14.0"
   }
 }
