--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "astro": "^4.5.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "nanostores": "^0.10.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "svelte": "^4.2.12",
