--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "@vercel/analytics": "^1.2.2",
+    "@vercel/postgres": "^0.8.0",
     "astro": "^4.5.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.30.10",
     "nanostores": "^0.10.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -33,5 +36,8 @@
     "tailwindcss": "^3.4.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.4.2"
+  },
+  "devDependencies": {
+    "drizzle-kit": "^0.21.2"
   }
 }
