--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "20.x"
-      - run: pnpm lint
+      - run: npm run lint
   check:
     runs-on: ubuntu-latest
     steps:
@@ -27,7 +27,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "20.x"
-      - run: pnpm check
+      - run: npm run check
   build:
     runs-on: ubuntu-latest
     steps:
@@ -36,4 +36,4 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "20.x"
-      - run: pnpm build
+      - run: npm run build
