--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
 		"generate": "drizzle-kit generate",
-		"migrate": "drizzle-kit migrate"
+		"migrate": "drizzle-kit migrate",
+		"db:push": "drizzle-kit push",
+		"db:migrate": "drizzle-kit migrate",
+		"db:studio": "drizzle-kit studio"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
@@ -20,7 +23,7 @@
 		"@types/eslint": "^8.56.7",
 		"autoprefixer": "^10.4.19",
 		"dotenv": "^16.4.5",
-		"drizzle-kit": "^0.22.1",
+		"drizzle-kit": "^0.22.0",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
@@ -42,11 +45,12 @@
 		"@vercel/postgres": "^0.8.0",
 		"bits-ui": "^0.21.10",
 		"clsx": "^2.1.1",
-		"drizzle-orm": "^0.31.0",
+		"drizzle-orm": "^0.31.2",
 		"lucide-svelte": "^0.381.0",
 		"mode-watcher": "^0.3.0",
 		"svelte-radix": "^1.1.0",
 		"tailwind-merge": "^2.3.0",
-		"tailwind-variants": "^0.2.1"
+		"tailwind-variants": "^0.2.1",
+		"@neondatabase/serverless": "^0.9.3"
 	}
 }
