--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@vercel/postgres": "^0.8.0",
+		"@neondatabase/serverless": "^0.9.3",
 		"bits-ui": "^0.21.10",
 		"clsx": "^2.1.1",
 		"drizzle-orm": "^0.31.2",
@@ -50,7 +50,6 @@
 		"mode-watcher": "^0.3.0",
 		"svelte-radix": "^1.1.0",
 		"tailwind-merge": "^2.3.0",
-		"tailwind-variants": "^0.2.1",
-		"@neondatabase/serverless": "^0.9.3"
+		"tailwind-variants": "^0.2.1"
 	}
 }
