--- a/package.json
+++ b/package.json
@@ -46,10 +46,13 @@
 		"bits-ui": "^0.21.10",
 		"clsx": "^2.1.1",
 		"drizzle-orm": "^0.31.2",
+		"formsnap": "^1.0.1",
 		"lucide-svelte": "^0.381.0",
 		"mode-watcher": "^0.3.0",
 		"svelte-radix": "^1.1.0",
+		"sveltekit-superforms": "^2.15.1",
 		"tailwind-merge": "^2.3.0",
-		"tailwind-variants": "^0.2.1"
+		"tailwind-variants": "^0.2.1",
+		"zod": "^3.23.8"
 	}
 }
