--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"lucide-svelte": "^0.381.0",
 		"mode-watcher": "^0.3.0",
 		"svelte-radix": "^1.1.0",
+		"svelte-sonner": "^0.3.24",
 		"sveltekit-superforms": "^2.15.1",
 		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.2.1",
