--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^8.56.7",
+		"@types/node": "^20.14.8",
 		"autoprefixer": "^10.4.19",
 		"dotenv": "^16.4.5",
 		"drizzle-kit": "^0.22.0",
