--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,6 +9,9 @@ on:
   pull_request:
     branches: ["main"]
 
+env:
+  POSTGRES_URL: Placeholder_Required_To_Build
+
 jobs:
   lint:
     runs-on: ubuntu-latest
