--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,17 +10,7 @@ on:
     branches: ["main"]
 
 env:
-  POSTGRES_URL: Placeholder_Required_To_Build
-
-jobs:
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Check formatting and lint using ESLint
-        uses: actions/setup-node@v3
-        with:
-          node-version: "20.x"
+  POSTGRES_URL: postgres://placeholder:required@to/build"
       - run: npm i
       - run: npm run lint
   check:
