--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,6 +11,16 @@ on:
 
 env:
   POSTGRES_URL: postgres://placeholder:required@to/build
+
+jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Check formatting and lint using ESLint
+        uses: actions/setup-node@v3
+        with:
+          node-version: "20.x"
       - run: npm i
       - run: npm run lint
   check:
